Added basic support for logout

--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -12,7 +12,11 @@
 <body>
 
 <h1>Azine</h1>
-
+  
+<a href="{% url django.contrib.auth.views.logout_then_login %}">
+    logout
+</a
+  
 {% block content %}
 {% endblock %}
 
