Added feature to apply for a job (pivotaltracker-id: 3887978)

--- a/azine/azine_main/templates/html/azine_main/job/index.html
+++ b/azine/azine_main/templates/html/azine_main/job/index.html
@@ -12,7 +12,8 @@
 	<tr>
 		<td>{{ job.title }}</td>
 		<td>{{ job.description }}</td>
-		<td><a href="{% url job_detail job.pk %}">detail</a></td>		
+		<td><a href="{% url job_detail job.pk %}">detail</a></td>
+		<td><a href="{% url application_add job.pk %}">apply</a></td>		
 	</tr>
 {% endfor %}
 </table>
