--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -18,7 +18,7 @@
         <ul>
                 <li><a href="{% url job_index %}">Jobs</a></li>
                 <li><a href="{% url application_index_for_user %}">My Applications</a></li>
-                <li><a href="{% url user_profile_update %}">Edit Profile</a></li>
+                <li><a href="{% url user_profile_change %}">Edit Profile</a></li>
                 <li><a href="{% url django.contrib.auth.views.logout_then_login %}">Logout</a></li>
         </ul>
 </div>
