Restructured app for more logical urls (Main sections are now: Home | Jobs | User profile & applications): - Added temporary home view - Added user profile page - Edited templates

--- a/azine/azine_main/templates/html/azine_main/login/login.html
+++ b/azine/azine_main/templates/html/azine_main/login/login.html
@@ -22,5 +22,10 @@
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
+<ul>
+    <li><a href="#">Sign up</a></li>
+    <li><a href="{% url password_reset %}">Forgot your password?</a></li>
+</ul>
+
 {% endblock %}
 
