--- a/azine/azine_main/templates/html/azine_main/job/index.html
+++ b/azine/azine_main/templates/html/azine_main/job/index.html
@@ -13,7 +13,7 @@
 		<td>{{ job.title }}</td>
 		<td>{{ job.description }}</td>
 		<td><a href="{% url job_detail job.pk %}">detail</a></td>
-		<td><a href="{% url application_add job.pk %}">apply</a></td>		
+		<td><a href="{% url job_apply job.pk %}">apply</a></td>		
 	</tr>
 {% endfor %}
 </table>
