--- a/azine/azine_main/templates/html/azine_main/user_profile/detail.html
+++ b/azine/azine_main/templates/html/azine_main/user_profile/detail.html
@@ -5,11 +5,9 @@
 {{ user.username }}
 {% endblock %}
 
-{% block heading %}
-{{ user.username }}
-{% endblock %}
+{% block heading %}{{ user.username }}{% endblock %}
 
 {% block content %}
-This is a user profile page.
+[This is a user profile page.]
 {% endblock %}
 
