--- a/azine/azine_main/templates/html/azine_main/job/add.html
+++ b/azine/azine_main/templates/html/azine_main/job/add.html
@@ -1,14 +1,17 @@
 {% extends "html/base.html" %}
+{% load i18n %}
 
 {% block title %}
 {{ block.super }}
 Add a job
 {% endblock %}
 
+{% block heading %}{% trans "Add new job" %}{% endblock %}
+
 {% block content %}
 <form method="POST" action="">
 	{{ form.as_p }} 
 	{% csrf_token %}
-	<input type="submit" value="Submit" />
+	<input type="submit" value="{% trans "Add this job" %}" />
 </form> 
 {% endblock %}
