--- a/azine/azine_main/templates/html/azine_main/job/detail.html
+++ b/azine/azine_main/templates/html/azine_main/job/detail.html
@@ -1,16 +1,17 @@
-
 {% extends "html/base.html" %}
+{% load i18n %}
 
 {% block title %}
 {{ block.super }}
 Job: {{ job.title }}
 {% endblock %}
 
+{% block heading %}{{ job.title }}{% endblock %}
+
 {% block content %}
-<h2>{{ job.title }}</h2>
 <p>{{ job.description }}</p>
-<ul>
-	<li><a href="{% url job_index %}">Job list</a></li>
+<ul class="nav">
+	<li><a href="{% url job_index %}">{% trans "Job list" %}</a></li>
 </ul>
 {% endblock %}
 
