--- a/azine/azine_main/templates/html/azine_main/user_profile/change.html
+++ b/azine/azine_main/templates/html/azine_main/user_profile/change.html
@@ -10,7 +10,7 @@ Edit Profile
 <form method="POST" action="">
 	{{ form.as_p }} 
 	{% csrf_token %}
-	<input type="submit" value="Submit" />
+	<input type="submit" value="{% trans "Save" %}" />
 </form>
 {% endblock %}
 
