Added support for sign up (piv-id: 4043561)

--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -42,7 +42,7 @@
                         </ul>
                     </li>
                     {% else %}
-                    <li><a href="{% url login %}">{% trans "Sign up" %}</a>
+                    <li><a href="{% url signup %}">{% trans "Sign up" %}</a>
                     {% endif %}
                 </ul>
             </div>
