- Added basic handling of errors.

--- a/azine/azine_main/templates/html/azine_main/login/login.html
+++ b/azine/azine_main/templates/html/azine_main/login/login.html
@@ -23,7 +23,7 @@
 </form>
 
 <ul class="nav">
-    <li><a href="#">{% trans "Sign up" %}</a></li>
+    <li><a href="{% url signup %}">{% trans "Sign up" %}</a></li>
     <li><a href="{% url password_reset %}">{% trans "Forgot your password?" %}</a></li>
 </ul>
 
