--- a/azine/azine_main/templates/html/azine_main/signup/signup.html
+++ b/azine/azine_main/templates/html/azine_main/signup/signup.html
@@ -4,18 +4,22 @@
 {% block content %}
 
 <form method="post" action="">{% csrf_token %}
+
 <table>
 <tr>
     <td>{{ form.first_name.label_tag }}</td>
     <td>{{ form.first_name }}</td>
+    <td>{{ form.first_name.errors }}</td>
 </tr>
 <tr>
     <td>{{ form.last_name.label_tag }}</td>
     <td>{{ form.last_name }}</td>
+    <td>{{ form.last_name.errors }}</td>
 </tr>
 <tr>
     <td>{{ form.email_address.label_tag }}</td>
     <td>{{ form.email_address }}</td>
+    <td>{{ form.email_address.errors }}</td>
 </tr>
 </table>
 
