--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -6,12 +6,18 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}azine_main/css/base.css" />
 
+<link href="{{ MEDIA_URL }}azine_main/css/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <link href="{{ MEDIA_URL }}azine_main/css/my_layout.css" rel="stylesheet" type="text/css"/>
 <!--[if lte IE 7]>
 <link href="css/patches/patch_my_layout.css" rel="stylesheet" type="text/css" />
 <![endif]-->
+<script type="text/javascript" src="{{ MEDIA_URL }}/azine_main/js/jquery.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}/azine_main/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}/azine_main/js/signup.js"></script>
+
 </head>
 <body>
+
 <!-- skip link navigation -->
 <ul id="skiplinks">
     <li><a class="skip" href="#nav">Skip to navigation (Press Enter).</a></li>
@@ -42,7 +48,7 @@
                         </ul>
                     </li>
                     {% else %}
-                    <li><a href="{% url signup %}">{% trans "Sign up" %}</a>
+                    <li><a id="signup" href="#">{% trans "Sign up" %}</a>
                     {% endif %}
                 </ul>
             </div>
@@ -133,6 +139,7 @@
         <!-- end: #footer -->
     </div>
 </div>
+
 <!-- full skip link functionality in webkit browsers -->
 <script src="./yaml/core/js/yaml-focusfix.js" type="text/javascript"></script>
 </body>
