Adding some messages and JQuery-based message output

--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -54,6 +54,7 @@
             </div>
             <!-- end: main navigation -->
         </div>
+				{% include "persistent_messages/message/includes/messages.jquery.html" %}
         <!-- begin: main content area #main -->
         <div id="main">
             <!-- begin: #col1 - first float column -->
